--- a/browser/chrome-extension/god-alike-comment/manifest.json
+++ b/browser/chrome-extension/god-alike-comment/manifest.json
@@ -4,7 +4,7 @@
   "name": "God-alike Comments",
   "description": "Ultimate 3rd party comment system",
   "version": "0.1",
-
+   
    "content_scripts": [ {
       "all_frames": true,
       "js": [ "jquery.min.js","shentucao.js" ],
@@ -12,9 +12,9 @@
 	  "exclude_matches": [ "https://*/*", "http://www.anwcl.com:8000/*" ]
    } ],
 
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
-  },
-  "permissions": []
+   "browser_action": {
+      "default_icon": "icons/browser_action_disabled.png",
+      "default_popup": "popup.html"
+   },
+  "permissions": [ ]
 }
