--- a/server/d1/.settings/org.eclipse.core.resources.prefs
+++ b/server/d1/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
-encoding//d1/templates/comments/comment_board_get.html=UTF-8
+encoding//comments/templates/comments/comment_board_get.html=UTF-8
+encoding//comments/views.py=utf-8
 encoding//d1/views.py=utf-8
