update template.. now its comfy to modify, not separate

--- a/server/d1/.settings/org.eclipse.core.resources.prefs
+++ b/server/d1/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//d1/views.py=utf-8
 encoding//testapp/views.py=UTF-8
+encoding//vine_comment/templates/comments/comment_view_meta.html=UTF-8
 encoding//vine_comment/templates/comments/comment_view_raw.html=UTF-8
 encoding//vine_comment/views.py=utf-8
