Enable chrome extension for current home website

--- a/browser/user-extension/chrome-extension/god-alike-comment/manifest.json
+++ b/browser/user-extension/chrome-extension/god-alike-comment/manifest.json
@@ -9,7 +9,7 @@
       "all_frames": true,
       "js": [ "jquery.min.js","shentucao.js" ],
       "matches": [ "http://*/*" ],
-	  "exclude_matches": [ "https://*/*", "http://www.anwcl.com:8000/*" ]
+	  "exclude_matches": [ "https://*/*", "http://www.anwcl.com/*" ]
    } ],
 
    "browser_action": {
