Enable chrome extension as a comment poster -- WIP

--- a/browser/user-extension/chrome-extension/god-alike-comment/manifest.json
+++ b/browser/user-extension/chrome-extension/god-alike-comment/manifest.json
@@ -16,5 +16,7 @@
       "default_icon": "icons/browser_action_disabled.png",
       "default_popup": "popup.html"
    },
-  "permissions": [ ]
+
+
+   "permissions": ["tabs", "http://www.anwcl.com/*"]
 }
