Comment out the shentucao right frame

--- a/browser/user-extension/chrome-extension/god-alike-comment/manifest.json
+++ b/browser/user-extension/chrome-extension/god-alike-comment/manifest.json
@@ -5,12 +5,14 @@
   "description": "Ultimate 3rd party comment system",
   "version": "0.1",
    
+  "comment": {
    "content_scripts": [ {
       "all_frames": true,
       "js": [ "jquery.min.js","shentucao.js" ],
       "matches": [ "http://*/*" ],
 	  "exclude_matches": [ "https://*/*", "http://www.anwcl.com/*" ]
-   } ],
+   } ]
+   },
 
    "browser_action": {
       "default_icon": "icons/browser_action_disabled.png",
