front page capture screen ok

--- a/browser/user-extension/chrome-extension/vine-comment/manifest.json
+++ b/browser/user-extension/chrome-extension/vine-comment/manifest.json
@@ -11,5 +11,5 @@
    },
 
 
-   "permissions": ["tabs", "http://www.tengmanpinglun.com/*"]
+   "permissions": ["tabs", "activeTab", "http://www.tengmanpinglun.com/*"]
 }
