try to make it ok..

--- a/browser/user-extension/chrome-extension/vine-comment/manifest.json
+++ b/browser/user-extension/chrome-extension/vine-comment/manifest.json
@@ -10,6 +10,9 @@
       "default_popup": "popup.html"
    },
 
+   "background": {
+       "scripts": ["background.js"]
+   },
 
-   "permissions": ["tabs", "activeTab", "http://www.tengmanpinglun.com/*"]
+   "permissions": ["tabs", "activeTab", "http://www.tengmanpinglun.com/*", "<all_urls>"]
 }
